@@ -86,6 +86,7 @@ int	b_read(int argc,char *argv[], Shbltin_t *context)
 	}
 	while((r = optget(argv,sh_optread))) switch(r)
 	{
+	    case 'a':
 	    case 'A':
 		flags |= A_FLAG;
 		break;
